# artable-detectors

./: .travis.yml  README.md
art_arcode_detector/bundles/: blue_container.xml  blue_container2.xml
art_arcode_detector/launch/: ar_code_detector_bundle.launch
art_arcode_detector/src/: detector.py
art_presence_detector/: CMakeLists.txt  package.xml
art_presence_detector/launch/: art_presence_detector.launch
art_presence_detector/scripts/: control_run.py
art_presence_detector/src/: node.cpp
